# Echo

./: .env.example  .gitignore  AGENTS.md  Echo-slides-template.pptx  README.md  package-lock.json  package.json  skills-lock.json
.github/workflows/: backend-tests.yml  basic-pitch-tests.yml  cre-tests.yml  frontend-checks.yml
backend/: .env.example  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.shared-registry.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/db/init/: 01_registry.sql
backend/dev-gateway/: Dockerfile  check_agentkit.ts  server.ts  test-agent.ts  test-manual.ts  unlink-gateway.ts
backend/fixtures/audio/: README.md
backend/scripts/: init-registry-schema.sh
backend/services/acrcloud-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/acrcloud-service/app/: config.py  main.py  routes.py  schemas.py  service.py
backend/services/acrcloud-service/tests/: conftest.py  test_check_public.py  test_fingerprint.py
backend/services/basic-pitch-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/basic-pitch-service/app/: config.py  main.py  routes.py  schemas.py  service.py
backend/services/basic-pitch-service/app/core/: audio.py  errors.py
backend/services/basic-pitch-service/app/schemas/: midi.py
backend/services/basic-pitch-service/tests/: conftest.py  test_convert.py  test_integration.py  test_profiles.py
backend/services/midi-similarity-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/midi-similarity-service/app/: config.py  main.py  registry_client.py  routes.py  schemas.py  service.py  similarity.py  store.py
backend/services/midi-similarity-service/tests/: conftest.py  test_endpoint.py  test_postgres_store.py  test_profiles.py  test_similarity.py
backend/services/registry-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/registry-service/app/: config.py  main.py  routes.py  schemas.py  service.py  store.py
backend/services/registry-service/tests/: conftest.py  helpers.py  test_endpoint.py  test_postgres_store.py
backend/services/report-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/report-service/app/: acoustic.py  config.py  main.py  routes.py  schemas.py  service.py
backend/services/report-service/tests/: conftest.py  test_report.py
backend/services/soundcloud-service/: .env.example  Dockerfile  README.md  pyproject.toml
backend/services/soundcloud-service/app/: __init__.py  config.py  main.py  routes.py  schemas.py  service.py
backend/services/soundcloud-service/scripts/: get_tokens.py
backend/services/soundcloud-service/tests/: __init__.py  conftest.py  test_profiles.py  test_upload.py
contracts/: LicenseEscrow.abi.json  Registry.abi.json  foundry.toml
contracts/broadcast/Deploy.s.sol/11155111/: run-1781316861853.json  run-1781320743671.json  run-1781325598819.json  run-1781326504293.json  run-1781328313599.json  run-1781362897395.json  run-1781365757095.json  run-1781410877169.json  run-latest.json
contracts/broadcast/DeployEscrow.s.sol/11155111/: run-1781416879354.json
contracts/script/: Deploy.s.sol  DeployEscrow.s.sol
contracts/src/: LicenseEscrow.sol  Registry.sol
contracts/test/: Registry.t.sol
cre/: README.md  project.yaml
cre/echo/: README.md  SIMULATION_RESULT.md  attestation.test.ts  attestation.ts  backend.ts  callback.ts  client.ts  confidential-backend.ts  confidential-steps.ts  config.dev-audio.json  config.production.json  config.staging.json  evm-callback.test.ts  evm-callback.ts  main.test.ts  main.ts  marius-logs.test.ts  marius-logs.ts  parse-input.ts  pipeline-events.ts  sample-submission-real.json  sample-submission.json  sim-limits-dev-audio.json  steps.ts  types.ts  workflow.yaml
cre/scripts/: diagnose-callback.ts
cre/src/: types.ts  workflow.ts
cre/src/lib/: backend.ts
cre/src/steps/: step1-convert.ts  step2a-check-public.ts  step2b-compare-private.ts
docs/: ECHO_ETHGlobalNY_.md  ECHO_TASK_DISTRIBUTION.md  Echo_ETHGlobalNY2026_FR_v3.md  Echo_Tasks_CNM.md  OWNER_KEY_DERIVATION.md  TheLoopProtocol_ETHGlobalNY2026_FR_v3.md  TheLoopProtocol_Tasks_CNM.md
frontend/: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/agentkit/challenge/: route.ts
frontend/src/app/api/flows/[flowId]/: route.ts
frontend/src/app/marketplace/: page.tsx
frontend/src/components/: echo-button-sounds.tsx
frontend/src/components/common/: echo-button-sounds.tsx  unlink-deposit-panel.tsx  wallet-connect-control.tsx
frontend/src/components/home/console/: flow-history-panel.tsx  pipeline-step-list.tsx  register-console.tsx  upload-dropzone.tsx  world-id-qr-modal.tsx
frontend/src/components/home/hero/: hero-panel.tsx  sponsor-marquee.tsx  vinyl-visual.tsx
frontend/src/components/home/layout/: bottom-nav.tsx  site-header.tsx
frontend/src/components/home/pipeline/: pipeline-section.tsx
frontend/src/components/home/report/: report-section.tsx
frontend/src/components/home/seal/: artist-controls.tsx  seal-certificate.tsx  sell-rights-modal.tsx
frontend/src/components/marketplace/: listing-panel.tsx
frontend/src/lib/: api-route.ts  blob-storage.ts  config.ts  flow-store.ts  licensing.ts  registry-handoff.ts  server-env.ts  sound-design.ts  types.ts  use-echo-button-sounds.ts  use-flow-history.ts  use-unlink-escrow.ts
frontend/src/lib/abi/: LicenseEscrow.json  Registry.json
frontend/src/lib/flow/: flow-status.ts  mock-reports.ts  pipeline-display.ts  report.ts
frontend/src/lib/flow-store/: file-adapter.ts  flow-store.test.ts  index.ts  postgres-adapter.ts  shared.ts
frontend/src/lib/hooks/: use-audio-preview.ts  use-echo-flow.ts  use-echo-sound-effects.ts  use-flow-history.ts  use-license-events.ts  use-listing-search.ts
frontend/src/lib/services/: agentkit.ts  soundcloud.ts  world-id.ts
frontend/src/lib/utils/: api-error.ts  audio.ts  encoding.ts  format.ts
(+18 files in other folders)
