[project]
name = "echo-acrcloud-service"
version = "0.1.0"
description = "Echo — pipeline Step 2A: acoustic fingerprint vs ACRCloud public database."
requires-python = ">=3.10"
dependencies = [
    # Also requires the sibling package echo-common, installed first — see
    # backend/README.md ("Develop a single service").
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    # ACRCloud's native SDK: used ONLY to extract the local fingerprint so raw
    # audio never leaves the service. Ships a platform binary wheel.
    "pyacrcloud>=1.0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.pyrefly]
search-path = [".", "../../packages/echo-common"]

