[project]
name = "echo-basic-pitch-service"
version = "0.1.0"
description = "Echo — pipeline Step 1: raw audio -> MIDI conversion via Spotify BasicPitch."
requires-python = ">=3.10,<3.13"
dependencies = [
    # Also requires the sibling package echo-common, installed first — see
    # backend/README.md ("Develop a single service").
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    # BasicPitch + its runtime. The exact ML backend (tf/coreml/tflite/onnx) is
    # resolved by the platform; see README for the per-OS choice.
    "basic-pitch>=0.4.0",
    # basic-pitch pins resampy<0.4.3, which still imports pkg_resources;
    # setuptools>=81 removed it. Keep until resampy is released without it.
    "setuptools<81",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Third-party deprecation noise (starlette/httpx, resampy, audioread). Targeted on
# purpose so our own code's warnings still surface.
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
    "ignore:pkg_resources is deprecated:UserWarning",
    "ignore:'aifc' is deprecated:DeprecationWarning",
    "ignore:'audioop' is deprecated:DeprecationWarning",
    "ignore:'sunau' is deprecated:DeprecationWarning",
]

[tool.pyrefly]
search-path = [".", "../../packages/echo-common"]

