[project]
name = "echo-midi-similarity-service"
version = "0.1.0"
description = "Echo — pipeline Step 2B: compositional similarity vs the private registry."
requires-python = ">=3.10"
dependencies = [
    # echo-common is a sibling path package (backend/packages/echo-common). Install it
    # first: `pip install -e ../../packages/echo-common`, then `pip install -e ".[dev]"`.
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
]

[tool.pyrefly]
search-path = [".", "tests", "../../packages/echo-common"]

