[project]
name = "echo-registry-service"
version = "0.1.0"
description = "Echo — private registry of sealed tracks (PostgreSQL): write at SEAL, read for comparison."
requires-python = ">=3.10"
dependencies = [
    # Also requires the sibling package echo-common, installed first — see
    # backend/README.md ("Develop a single service").
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`",
]
