[project]
name = "echo-report-service"
version = "0.1.0"
description = "Echo — pipeline Step 4: acoustic extraction + final ranked report."
requires-python = ">=3.10"
dependencies = [
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "librosa>=0.10",
    "numpy>=1.26",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyrefly]
search-path = [".", "tests", "../../packages/echo-common"]
